# src/routes/invoicing.route.ts
@@ -14,10 +14,12 @@ export class InvoicingRoute implements Routes {
   }
 
   private initializeRoutes() {
-    // this.router.get(`${this.path}`, this.invoicing.createInvoicing);
-    // this.router.get(`${this.path}/:id`, this.invoicing.getInvoicing);
+    this.router.get(`${this.path}`, this.invoicing.getInvoicing);
+    this.router.get(`${this.path}/:id`, this.invoicing.getsingleInvoicing);
     this.router.post(`${this.path}`, ValidationMiddleware(CreateInvoicingDto), this.invoicing.createInvoicing);
-    // this.router.put(`${this.path}/:id`, ValidationMiddleware(CreateInvoicingDto, true), this.invoicing.updateInvoicing);
-    // this.router.delete(`${this.path}/:id`, this.invoicing.deleteInvoicing);
-  }
+    this.router.delete(`${this.path}/:id`, this.invoicing.deleteInvoicing);
+this.router.put(`${this.path}/:id`, ValidationMiddleware(CreateInvoicingDto, true), this.invoicing.updateInvoicing);
+
+}
+
 }
