# swagger.yaml
@@ -9,6 +9,8 @@ tags:
     description: Session API
   - name: agency
     description: agency API
+    - name: invoicing
+    description: invoicing API
 
 securityDefinitions:
   BearerAuth:
@@ -688,6 +690,105 @@ definitions:
         type: string
         description: Social media link of the agency
 
+
+
+paths:
+  # [GET] users
+  /invoicing:
+    get:
+      tags:
+        - invoicing
+      summary: Find All invoicing
+      responses:
+        200:
+          description: 'OK'
+        500:
+          description: 'Server Error'
+
+    # [POST] invoicing
+    post:
+      tags:
+        - invoicing
+      summary: Add User
+      parameters:
+        - name: body
+          in: body
+          description: user Data
+          required: true
+          schema:
+            $ref: '#/definitions/invoicing'
+      responses:
+        201:
+          description: 'Created'
+        400:
+          description: 'Bad Request'
+        409:
+          description: 'Conflict'
+        500:
+          description: 'Server Error'
+
+  # [GET] invoicing/id
+  /invoicing/{id}:
+    get:
+      tags:
+        - invoicing
+      summary: Find User By Id
+      parameters:
+        - name: id
+          in: path
+          description: User Id
+          required: true
+      responses:
+        200:
+          description: 'OK'
+        409:
+          description: 'Conflict'
+        500:
+          description: 'Server Error'
+
+    # [PUT] invoicing/id
+    put:
+      tags:
+        - invoicing
+      summary: Update User By Id
+      parameters:
+        - name: id
+          in: path
+          description: user Id
+          required: true
+        - name: body
+          in: body
+          description: user Data
+          required: true
+          schema:
+            $ref: '#/definitions/invoicing'
+      responses:
+        200:
+          description: 'OK'
+        400:
+          description: 'Bad Request'
+        409:
+          description: 'Conflict'
+        500:
+          description: 'Server Error'
+
+    # [DELETE] invoicing/id
+    delete:
+      tags:
+        - invoicing
+      summary: Delete User By Id
+      parameters:
+        - name: id
+          in: path
+          description: user Id
+          required: true
+      responses:
+        200:
+          description: 'OK'
+        409:
+          description: 'Conflict'
+        500:
+          description: 'Server Error'
 schemes:
   - https
   - http
